--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,7 +11,9 @@ jobs:
       - name: Typst
         uses: lvignoli/typst-action@main
         with:
-          source_file: src/main.typ
+          source_file: |
+            src/annotation-system.typ
+            src/CFG-based-system.typ
 
       - name: Upload PDF file
         uses: actions/upload-artifact@v3
